# litellm-relay

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  index.html  install.sh  pyproject.toml  uninstall.sh
.github/workflows/: ci.yml  release.yml
Formula/: litellm-relay.rb  relay.rb
docs/: ai-agent-install.md  claude-code.md  claude-desktop.md  claude-version-management-v0.md  codex-cli.md  codex-vscode.md  codex.md  conformance-matrix.md  formal-release-announcement.md  managing-ai-tool-versions.md  mdm.md  notion-shadow-v0.md  release-plan.md
mdm/: config.yaml.example  litellm-relay-claude-desktop.mobileconfig.example  litellm-relay-pac.mobileconfig.example
scripts/: build-macos-pkg.sh
scripts/ci/: proxy_smoke.sh
scripts/macos-pkg/: postinstall
src/: app.rs  apps.rs  auth.rs  cert.rs  claude.rs  config.rs  events.rs  gateway.rs  http.rs  install.sh  main.rs  pac.rs  proxy.rs  setup.rs  system.rs  terminal.rs  traffic.rs  uninstall.sh
src/ai_tools/: CLAUDE.md  autoconfigure.rs  detect.rs  idp.rs  managed_config.rs  mod.rs  sync.rs  token.rs  version.rs
src/ai_tools/claude_cli/: mod.rs
src/ai_tools/claude_desktop/: mod.rs
src/ai_tools/codex/: mod.rs
src/litellm_relay/: __init__.py  cli.py  config.py  pac.py  proxy.py  shadow.py  ui.py
src/onboarding/: claude.rs  mod.rs  token.rs
src/static/: dashboard.html  known_apps.json
tests/: test_config.py  test_pac.py  test_proxy.py  test_shadow.py
ui/: index.html  package.json  pnpm-lock.yaml  tsconfig.app.json  tsconfig.node.json  vite.config.ts
ui/src/: App.tsx  index.css
(+6 files in other folders)
