[package]
name = "litellm-relay"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "Local endpoint relay for routing and auditing AI app traffic through LiteLLM Gateway."

[[bin]]
name = "litellm-relay"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
base64 = "0.22"
brotli = "7.0"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive"] }
flate2 = "1.0"
reqwest = { version = "0.12", default-features = false, features = ["cookies", "json", "rustls-tls"] }
rustls = "0.23"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
sha2 = "0.10"
tokio = { version = "1.40", features = ["full"] }
tokio-rustls = "0.26"
toml_edit = "0.22"
url = "2.5"
uuid = { version = "1.10", features = ["v4"] }
webpki-roots = "0.26"
zstd = "0.13"
