[project]
name = "litellm-relay"
version = "0.1.0"
description = "Local endpoint relay for shadowing and routing AI app traffic through LiteLLM Gateway."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [{ name = "LiteLLM" }]
dependencies = []

[project.scripts]
litellm-relay = "litellm_relay.cli:main"
